Fixed animation to not double render on the first contextmenu click by keeping track of the visible state and starting at 0 opacity

--- a/src/app/context-dropdown/view/context-dropdown.view.css
+++ b/src/app/context-dropdown/view/context-dropdown.view.css
@@ -7,6 +7,8 @@
   position: absolute;
   z-index: 100;
   background-color: #fafafa;
+  transform-origin: top;
+  opacity: 0;
 }
 
 .dropdown > .option {
@@ -19,4 +21,3 @@
   transform: scale(1.015);
   border-left: red 2px solid;
 }
-
